# OASI-Weather

./: README.md  pyproject.toml
src/: __main__.py  allsky.py  config.yaml  database.py  main.py  oculus.yaml  sigma.yaml  start_oasi_weather.bat  util.py  weatherstation.py
src/assets/: layout.css
