[project]
name = "oasi-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pymodbus>=3.8.6",
    # "pyvantagepro>=0.3.2",
    # "weatherlink>=1.1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}
